--- a/LatestGists/res/layout/activity_main.xml
+++ b/LatestGists/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:text="@string/gists_unavailable" />
     
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/progress_bar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
